--- a/app/assets/stylesheets/static_pages.css.less
+++ b/app/assets/stylesheets/static_pages.css.less
@@ -5,6 +5,10 @@
 @sf-background-color: lightgray;
 @sf-height: 150px;
 
+.index-page-wrapper {
+  background-color: #fff;
+}
+
 pre.prettyprint {
   border: 1px solid #999;
   margin-bottom: 0;
