--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -6,7 +6,7 @@
       = 'Competition'
   - else
     %span= 'Creating classic competitions available only for registered users.'
-
+  .top-buffer
   .content-block
     %ul.comp-list
       - @events.each do |comp|
