--- a/app/views/tracks/_view_settings_menu.html.haml
+++ b/app/views/tracks/_view_settings_menu.html.haml
@@ -1,5 +1,6 @@
-%button.btn.btn-default.dropdown-toggle#dropdownMenu1{type: 'button', data: {toggle: 'dropdown'}}
+%button.btn-flat.same-padding.dropdown-toggle#track-view-settings-dropdown{type: 'button', data: {toggle: 'dropdown'}}
   %i.fa.fa-cog
+  = t('general.settings')
 %ul.dropdown-menu.dropdown-menu-right{role: 'menu', aria: {labelledby: 'dropdownMenu1'}}
   %li.dropdown-header{role: 'presentation'}
     =t 'tracks.show.menu_header'
