--- a/app/views/virtual_competitions/index.html.haml
+++ b/app/views/virtual_competitions/index.html.haml
@@ -3,7 +3,7 @@
     %a.btn.btn-default.btn-info{href: new_virtual_competition_path}
       %i.fa.fa-plus
       = 'Онлайн соревнование'
- 
+  .top-buffer 
   - @competitions.each do |group, competitions|
     .content-block
       %h3= group
