--- a/app/views/virtual_competitions/show.html.haml
+++ b/app/views/virtual_competitions/show.html.haml
@@ -1,85 +1,84 @@
 - provide :title, competition_title(@competition)
 
-.container
-  .page-header
+.container.top-buffer
+  .content-block
+    - if can? :update, @competition
+      .card-action
+        .position-right
+          = link_to edit_virtual_competition_path(@competition), class: 'btn-flat' do
+            %i.fa.fa-pencil
+            = t('general.edit')
+    %h2= competition_title(@competition)
+    %div.top-buffer
+      = t('virtual_competitions.place')
+      - if @competition.place
+        = place_presentation(@competition.place)
+      - else
+        = t('virtual_competitions.worldwide')
+
+    %div= competition_suit
+    %div= competition_task(@competition)
+    .top-buffer
+
+    - if @competition.personal_top_scores.size > 2
+      - winners = @competition.personal_top_scores.take(3)
+      .row.top-buffer-30
+        .col-sm-4.col-md-4
+          = render 'winner', result: winners.first
+        .col-sm-4.col-md-4
+          = render 'winner', result: winners.second
+        .col-sm-4.col-md-4
+          = render 'winner', result: winners.third
     .row
-      .col-sm-10
-        %h1.light-header
-          = competition_title(@competition)
-        %div.top-buffer
-          = t('virtual_competitions.place')
-          - if @competition.place
-            = place_presentation(@competition.place)
-          - else
-            = t('virtual_competitions.worldwide')
-
-        %div= competition_suit
-        %div= competition_task(@competition)
-        .top-buffer
-      .col-sm-2
-        .pull-right
-          - if can? :update, @competition
-            = link_to t('general.edit'), edit_virtual_competition_path(@competition), class: 'btn btn-default'
-
-  - if @competition.personal_top_scores.size > 2
-    - winners = @competition.personal_top_scores.take(3)
-    .row.top-buffer-30
-      .col-sm-4.col-md-4
-        = render 'winner', result: winners.first
-      .col-sm-4.col-md-4
-        = render 'winner', result: winners.second
-      .col-sm-4.col-md-4
-        = render 'winner', result: winners.third
-  .row
-    .col-sm-12
-      %table.table.vc-scoreboard-table
-        %thead
-          %tr
-            %th= '#'
-            %th=t 'activerecord.attributes.track.name'
-            %th=t 'activerecord.attributes.track.suit'
-            - if @competition.worldwide?
-              %th= t 'activerecord.attributes.track.place'
-            %th.text-right= 'Result'
-            - if @competition.display_highest_speed
-              %th.text-right= 'Best speed'
-            - if @competition.display_highest_gr
-              %th.text-right= 'Best G/R'
-            %th.text-right=t 'activerecord.attributes.track.recorded_at'
-            %th
-        %tbody
-          - @competition.personal_top_scores.each do |personal_score|
+      .col-sm-12
+        %table.table.vc-scoreboard-table
+          %thead
             %tr
-              %td= personal_score.rank
-              %td
-                = link_to(personal_score.profile.name.titleize,
-                          personal_score.profile,
-                          'data-toggle' => 'tooltip',
-                          title: t('.show_profile'))
-              %td= suit_presentation(personal_score.wingsuit)
+              %th= '#'
+              %th=t 'activerecord.attributes.track.name'
+              %th=t 'activerecord.attributes.track.suit'
               - if @competition.worldwide?
-                %td= track_place(personal_score.track)
-              %td.text-right= link_to format_result(personal_score.result, @competition),
-                personal_score.track,
-                'data-toggle' => 'tooltip',
-                title: t('.show_details')
+                %th= t 'activerecord.attributes.track.place'
+              %th.text-right= 'Result'
               - if @competition.display_highest_speed
-                %td.text-right= (personal_score.highest_speed || 0.0).round(1)
+                %th.text-right= 'Best speed'
               - if @competition.display_highest_gr
-                %td.text-right= (personal_score.highest_gr || 0.0).round(2)
-              %td.text-right= personal_score.recorded_at.strftime('%d.%m.%Y')
-              %td
-                - if personal_score.track.video
-                  %i.fa.fa-video-camera
+                %th.text-right= 'Best G/R'
+              %th.text-right=t 'activerecord.attributes.track.recorded_at'
+              %th
+          %tbody
+            - @competition.personal_top_scores.each do |personal_score|
+              %tr
+                %td= personal_score.rank
+                %td
+                  = link_to(personal_score.profile.name.titleize,
+                            personal_score.profile,
+                            'data-toggle' => 'tooltip',
+                            title: t('.show_profile'))
+                %td= suit_presentation(personal_score.wingsuit)
+                - if @competition.worldwide?
+                  %td= track_place(personal_score.track)
+                %td.text-right= link_to format_result(personal_score.result, @competition),
+                  personal_score.track,
+                  'data-toggle' => 'tooltip',
+                  title: t('.show_details')
+                - if @competition.display_highest_speed
+                  %td.text-right= (personal_score.highest_speed || 0.0).round(1)
+                - if @competition.display_highest_gr
+                  %td.text-right= (personal_score.highest_gr || 0.0).round(2)
+                %td.text-right= personal_score.recorded_at.strftime('%d.%m.%Y')
+                %td
+                  - if personal_score.track.video
+                    %i.fa.fa-video-camera
 
 
-  - unless @competition.sponsors.empty?
-    .row.top-buffer
-      .col-md-12
-        %h4= t('events.show.event_sponsors') + ':'
-  .row#sponsors
-    = render @competition.sponsors
-  - if can? :edit, @competition
-    = link_to new_virtual_competition_sponsor_path(virtual_competition_id: @competition.id), remote: true, class: 'add-sponsor' do
-      %i.fa.fa-plus
-      = t('.add_sponsor')
+    - unless @competition.sponsors.empty?
+      .row.top-buffer
+        .col-md-12
+          %h4= t('events.show.event_sponsors') + ':'
+    .row#sponsors
+      = render @competition.sponsors
+    - if can? :edit, @competition
+      = link_to new_virtual_competition_sponsor_path(virtual_competition_id: @competition.id), remote: true, class: 'add-sponsor' do
+        %i.fa.fa-plus
+        = t('.add_sponsor')
