refactoring, enhanced gr level, fixed single chart error

--- a/app/assets/stylesheets/content_blocks.css.scss
+++ b/app/assets/stylesheets/content_blocks.css.scss
@@ -18,9 +18,10 @@
   .card-action {
     margin-left: auto;
     text-align: right;
-    text-transform: uppercase;
 
-    button {
+    &> .dropdown > button,
+    > button,
+    > a {
       text-transform: uppercase;
     }
   }
