--- a/app/views/tracks/_show_track.html.haml
+++ b/app/views/tracks/_show_track.html.haml
@@ -5,7 +5,7 @@
 
     .content-block
       .card-action
-        .dropdown.position-right
+        .dropdown.position-right.settings-button
           = render 'tracks/view_settings_menu'
 
       = render partial: 'indicators', locals: {presenter: @track_presenter}
