fixed error that prevented change range from form

--- a/app/views/tracks/_track_edit_range.html.haml
+++ b/app/views/tracks/_track_edit_range.html.haml
@@ -26,4 +26,4 @@
               = link_to 'FAI window: 3000-2000 m', track_path(@track, f: 3000, t: 2000), remote: true, 'data-dismiss': 'modal', class: 'btn btn-default'
 
           %button.btn.btn-default{type: 'button', data: {dismiss: 'modal'}}= t('general.cancel')
-          = f.submit 'OK', 'data-dismiss': 'modal', class: 'btn btn-primary'
+          = f.submit 'OK', class: 'btn btn-primary'
