added client side validations to weather datum

--- a/app/views/weather_data/edit.js.erb
+++ b/app/views/weather_data/edit.js.erb
@@ -1,1 +1,3 @@
-$("#<%= dom_id(@weather_datum)%>").replaceWith("<%= j render('form_row') %>");
+$("#<%= dom_id(@weather_datum) %>").replaceWith("<%= j render('form_row') %>");
+
+<%= render 'form_validation' %>
