--- a/app/views/tracks/index.html.haml
+++ b/app/views/tracks/index.html.haml
@@ -6,11 +6,11 @@
           %h3=t '.filters'
       .row
         .col-sm-3
-          %select{name: 'query[profile_id]'}
+          %select.form-control{name: 'query[profile_id]'}
         .col-sm-3
-          %select{name: 'query[suit_id]'}
+          %select.form-control{name: 'query[suit_id]'}
         .col-sm-3
-          %select{name: 'query[place_id]'}
+          %select.form-control{name: 'query[place_id]'}
         .col-sm-3
           .pull-right
             .btn-group
