fix turbolinks and select2 issue on tracks#index

--- a/app/views/tracks/_init_filter_elements.js.erb
+++ b/app/views/tracks/_init_filter_elements.js.erb
@@ -12,3 +12,9 @@ Skyderby.helpers.PlaceSelect(
   $('select[name="query[place_id]"]'),
   { placeholder: "<%= I18n.t('tracks.index.filter_by_place') %>" }
 );
+
+$(document).on('turbolinks:before-cache', function() {
+  $('select[name="query[profile_id]"]').select2('destroy');
+  $('select[name="query[suit_id]"]').select2('destroy');
+  $('select[name="query[place_id]"]').select2('destroy');
+});
