--- a/app/views/errors/ajax_errors.js.erb
+++ b/app/views/errors/ajax_errors.js.erb
@@ -4,6 +4,6 @@
     <% errors_text += "- #{msg} \n" %>
   <% end %>
 <% end %>
-<% errors_text = "#{t('errors.messages.not_saved', {count: errors.count, resource: 'object'})} \r\n#{errors_text}" %>
+<% errors_text = "#{t('errors.messages.not_saved', count: errors.count)} \r\n#{errors_text}" %>
 
-AjaxErrorMessage.display("<%=j errors_text%>");
+AjaxErrorMessage.render("<%= j errors_text.html_safe %>");
